[#10805] Support bulk access control operations
